Spring Security: configura aplicação como Resource Server;

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,11 @@ spring:
     hibernate:
       ddl-auto: update
       dialect: org.hibernate.dialect.H2Dialect
+  ##
+  # Spring Security - Resource Server
+  ##
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:18080/realms/revenda-carros
