--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,4 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:18080/realms/revenda-carros
+          jwk-set-uri: http://localhost:18080/realms/revenda-carros/protocol/openid-connect/certs
